# WordlySolver

./: .gitignore  README.md  consts.py  correct5words.csv  dev.txt  pyproject.toml  tree.py  util.py  worlds_finder_filter.py
src/wordly_solver/core/: wordly_solver.py
src/wordly_solver/core/game/: entities.py
src/wordly_solver/core/game/adapters/: wordly_finder.py
src/wordly_solver/core/game/contracts/: wordly_finder.py
src/wordly_solver/core/game/ports/: wordly_finder.py
src/wordly_solver/core/game/usecases/: exceptions.py  get_exclude_word.py  get_next_word.py  get_suitable_word.py
src/wordly_solver/core/user/: entities.py
src/wordly_solver/core/user/adapters/: id_provider.py
src/wordly_solver/core/user/ports/: id_provider.py
src/wordly_solver/core/words/: constants.py
src/wordly_solver/core/words/adapters/: words_gateway.py
src/wordly_solver/data/: wordly_tree.py
src/wordly_solver/data/adapters/: wordly_tree.py
tests/: wordly_tree_test.py
tests/adapters/: wordly_tree_test.py
tests/core/: test_get_next_word.py
util/: correct5words.csv  util.py  worlds_finder_filter.py
