[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "WordlySolver"
version = "0.0.1"
authors = [
    { name = "Evalve3", email = "evalve39@gmail.com" },
]
description = "WordlySolver"
requires-python = ">=3.8"

dependencies = [

]

[project.optional-dependencies]
test = [
    "pytest"
]

linter = [
    "mypy",
    "ruff"
]