[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "WordlySolver"
version = "0.0.1"
authors = [
    { name = "Evalve3", email = "evalve39@gmail.com" },
]
description = "WordlySolver"
requires-python = ">=3.8"

dependencies = [

]

[project.optional-dependencies]
test = [
    "pytest"
]
linter = [
    "ruff"
]
type_checker = [
    "mypy",
]