[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "WordlySolver"
version = "0.0.1"
authors = [
    { name = "Evalve3", email = "evalve39@gmail.com" },
]
description = "WordlySolver"
requires-python = ">=3.12"

dependencies = [

]
